# tpt-script-generator

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/tpt_script_generator/: __about__.py  __init__.py  base_operator.py  ddl_operator.py  enums.py  load_operator.py  schema.py  script.py  step.py  tpt_operator.py  update_operator.py
src/tpt_script_generator/enums/: __init__.py  ddl_operator.py  load_operator.py  update_operator.py
tests/: test_ddl_script.py  test_load_operator.py  test_script.py  test_update_script.py
